# arxiv-curator

./: .env.example  .gitignore  README.md  interests.yaml  pyproject.toml
.github/workflows/: agent-pick.yml  ci.yml  daily-digest.yml
digests/: 2026-07-08.md  2026-07-09.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  agent-pick-2026-07-10.md  agent-pick-2026-07-17.md  agent-pick-2026-07-24.md  agent-pick-latest.md
docs/superpowers/plans/: 2026-07-07-arxiv-curator.md
docs/superpowers/specs/: 2026-07-07-arxiv-curator-design.md
src/: agent_pick.py  cli.py  db.py  digest.py  eval.py  fetch.py  interests.py  models.py  rank.py
src/arxiv_curator/: agent_pick.py  cli.py  db.py  digest.py  eval.py  feedback.py  fetch.py  models.py  rank.py  sync.py
src/arxiv_curator/llm/: agent_loop.py  embeddings.py  factory.py  gemini_provider.py
src/llm/: base.py  retry.py
tests/: test_agent_loop.py  test_agent_pick.py  test_cli.py  test_db.py  test_digest.py  test_embeddings.py  test_eval.py  test_feedback.py  test_fetch.py  test_gemini_provider.py  test_interests.py  test_models.py  test_rank.py  test_retry.py  test_sync.py
