[project]
name = "arxiv-curator"
version = "0.1.0"
description = "Personal backend/CLI for fetching, summarizing, and ranking arXiv papers against your interests"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "google-genai>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
arxiv-curator = "arxiv_curator.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
